--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <hr>
 
     <footer>
-      <p>&copy; Joel Buchheim-Moore <joelbm24@gmail.com> 2023</p>
+      <p>&copy; Joel Buchheim-Moore joelbm24@gmail.com 2023</p>
     </footer>
 
   </div> <!-- /container -->
