adjusted image size

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="container">
     <div class="hero-unit">
       <h1>Joel Buchheim-Moore</h1>
-      <img src="avatar.jpg" width="20%">
+      <img src="avatar.jpg" width="200em">
       <p style="margin-top: 1em;">
         Hi, my name is Joel and I like to make things.
       </p>
